--- a/thesis/notation.tex
+++ b/thesis/notation.tex
@@ -18,9 +18,9 @@
     (in this case, \(f_{X,Y|Z}\) is implied).  A \(q\) may be used as well, mostly for proposal
     distributions or unnormalized densities.
   \item[{\(X_{i} \from \distr{Normal}(\mu, \sigma)\)}] The tilde notation for describing random
-    variables is used throughout, without explicitely specifying dependence or independence, where
-    understood from context.  Named distributions that are not themselves random variables are spelled
-    out in upright script.
+    variables is used throughout, often without explicitely specifying dependence or independence,
+    where understood from context.  Named distributions that are not themselves random variables are
+    spelled out in upright script.
   \item[{\(Y \from q(\cdot, X_{i-1})\)}] The same notation is used when a random variable is specified
     to be sampled from a given, possibly unnormalized, density.  In this context and elsewhere, the
     midpoint is employed to denote anonymous functions of one variable given by partial application.
