--- a/thesis/jlcode.sty
+++ b/thesis/jlcode.sty
@@ -1038,6 +1038,7 @@ literate=
 {⋮}{{\ucc{${\scriptstyle \rvdots}$}}}{1}
 {⋱}{{\ucc{${\scriptstyle \rddots}$}}}{3}
 {⋰}{{\ucc{${\scriptstyle \riddots}$}}}{3}
+{ℓ}{{\ucc{$\ell$}}}{1}
 %
 }
 
