--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -21,7 +21,7 @@
 
 \usepackage{typographic_setup}
 \usepackage[final]{mylistings}
-\usepackage{jlcode}
+\usepackage[charsperline=94]{jlcode}
 
 \title{Automatic Graph Tracking in Probabilistic Programs via Source Transformations}
 
